# KiwiFlanger

./: CMakeLists.txt  README.md
cmake/: FindKiwiWaves.cmake  FindSndFile.cmake
include/: FileIn.h  FlangerTone.h
src/: FileIn.cpp  main.cpp
